code/doug-xmonad/.stack-work/logs/doug-xmonad-0.1.0.0.log-color
Configuring doug-xmonad-0.1.0.0...
Preprocessing executable 'doug-xmonad' for doug-xmonad-0.1.0.0..
Building executable 'doug-xmonad' for doug-xmonad-0.1.0.0..
[1 of 1] Compiling Main             ( xmonad.hs, .stack-work/dist/x86_64-linux-nix/Cabal-2.2.0.1/build/doug-xmonad/doug-xmonad-tmp/Main.o )

[;1mxmonad.hs:243:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    The type signature for ‘nixrootKeyMap’
      lacks an accompanying binding[0m[0m
[;1m[34m    |[0m[0m
[;1m[34m243 |[0m[0m [;1m[31mnixrootKeyMap[0m[0m :: (_ ) => XConfig Layout -> Bool -> BindT m ()
[;1m[34m    |[0m[0m[;1m[31m ^^^^^^^^^^^^^[0m[0m
[0m[0m[0m